--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Wails build
+name: Build
 
 on:
   push:
@@ -31,11 +31,11 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Build wails
+      - name: Build wails app
         uses: dAppServer/wails-build-action@main
         id: build
         with:
           build-name: ${{ matrix.build.name }}
           build-platform: ${{ matrix.build.platform }}
-          package: false
+          package: true
           go-version: '1.24.5'
